--- a/src/client/app/dashboard/admin/admin.component.html
+++ b/src/client/app/dashboard/admin/admin.component.html
@@ -16,8 +16,9 @@
                     <div class="form-group">
 						<input type="password" [(ngModel)]='newPass2' name='newPass2' class="form-control input-underline input-lg" id="newPass2" placeholder="Retype New Password">
 					</div>
-				</div>
-				<a class="btn rounded-btn" (click) ='onSubmit($event)'> Change Password </a>
+				</div><br>
+				<!--<a class="btn rounded-btn" (click) ='onSubmit($event)'> Change Password </a>-->
+				<button  class="btn btn-primary" (click) ='onSubmit($event)'>Change Password</button>                          
 			</form>
 		</div>	
 	</div>
