--- a/src/client/app/dashboard/item/item.component.html
+++ b/src/client/app/dashboard/item/item.component.html
@@ -19,7 +19,7 @@
     background-color: #fefefe;
     margin: 5px auto; /* 15% from the top and centered */
     border: 1px solid #888;
-    width: 80%; /* Could be more or less, depending on screen size */
+    width: 30%; /* Could be more or less, depending on screen size */
 }
 
 /* The Close Button */
@@ -28,8 +28,8 @@
     position: absolute;
     right: 25px;
     top: 0; 
-    color: #000;
-    font-size: 35px;
+    color: red;
+    font-size: 50px;
     font-weight: bold;
 }
 
@@ -106,104 +106,101 @@
 <!--FINISH PASSING ID TO MODAL-->
 <!-- The Modal -->
 <div id="add" class="modal">
-  <span onclick="document.getElementById('add').style.display='none'" 
-class="close" title="Close Modal">&times;</span>
-
-  <!-- Modal Content  (ngSubmit)="onSubmitadd(user.value)" -->
-  <form [formGroup]="complexForm" role="form" id="data2" class="modal-content animate" >
-				<div class="form-content">
-      <div class="container" align="center">
-      <br><br><br>
-      <div class="form-group">
-            <label><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Item Name</b></label>
-            <input type="text" (change)="ngOnChanges($event)" [formControl]="complexForm.controls['itemName']"  placeholder="Enter Item Name"   [(ngModel)]="itemName" name="itemName" required >
-            <br><br>
-      </div>
-      <div class="form-group">
-            <label><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Item Quantity Stored</b></label>
-            <input type="text" (change)="ngOnChanges($event)" [formControl]="complexForm.controls['itemQuantityStored']" placeholder="Enter Quantity to be Stored"  [(ngModel)]="itemQuantityStored" name="itemQuantityStored" required >
-            <br><br>
-      </div>
-
-      <div class="form-group">
-            <label><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Price</b></label>
-            <input type="text" (change)="ngOnChanges($event)" [formControl]="complexForm.controls['itemPrice']" placeholder="Enter Price"  [(ngModel)]="itemPrice" name="itemPrice" required >
-            <br><br>
-      </div>
-      <div class="form-group">
-            <label><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Purchase Count</b></label>
-            <input #pic type="file" (change)="onChange($event)" name="picture" required >
-            <br><br>
-      </div>
-       <div class="form-group"> 
-            <button [disabled]="!complexForm.valid || !valid" class="btn btn-primary" (click) ='onSubmitAdd($event, user.value)'>Add</button>    
-        
-        </div>
-        </div>
-   </div>
-   </form>
+    <span onclick="document.getElementById('add').style.display='none'" class="close" title="Close Modal">&times;</span>
+        <!-- Modal Content  (ngSubmit)="onSubmitadd(user.value)" -->
+        <form [formGroup]="complexForm" role="form" id="data2" class="modal-content animate" >
+            <div class="form-content">
+                <div class="container" align="center"><br><br>
+                    <div align="left" class="form-group" [ngClass]="{'has-error':!complexForm.controls['itemName'].valid && complexForm.controls['itemName'].touched}">
+                        <label><b>Item Name</b></label>
+                        <input class="form-control input-underline input-lg" type="text" (change)="ngOnChanges($event)" [formControl]="complexForm.controls['itemName']"  placeholder="Enter Item Name"   [(ngModel)]="itemName" name="itemName" required >
+                        <div *ngIf="complexForm.controls['itemName'].hasError('required') && complexForm.controls['itemName'].touched" class="alert alert-danger">You must include an item name.</div>
+                    </div>
+                    <div align="left" class="form-group" [ngClass]="{'has-error':!complexForm.controls['itemQuantityStored'].valid && complexForm.controls['itemQuantityStored'].touched}">
+                            <label><b>Item Quantity Stored</b></label>
+                            <input class="form-control input-underline input-lg" type="text" (change)="ngOnChanges($event)" [formControl]="complexForm.controls['itemQuantityStored']" placeholder="Enter Quantity to be Stored"  [(ngModel)]="itemQuantityStored" name="itemQuantityStored" required >
+                            <div *ngIf="complexForm.controls['itemQuantityStored'].hasError('required') && complexForm.controls['itemQuantityStored'].touched" class="alert alert-danger">You must include how many items are stored.</div>
+                            <div *ngIf="complexForm.controls['itemQuantityStored'].hasError('minlength') && complexForm.controls['itemQuantityStored'].touched" class="alert alert-danger">You must include an item name.</div>
+                            <div *ngIf="complexForm.controls['itemQuantityStored'].hasError('maxlength') && complexForm.controls['itemQuantityStored'].touched" class="alert alert-danger">Item Quantity stored must not exceed 10 characters.</div>
+                            <div *ngIf="complexForm.controls['itemQuantityStored'].hasError('pattern') && complexForm.controls['itemQuantityStored'].touched" class="alert alert-danger">Item Quantity stored must be a valid number without decimals.</div>
+                    </div>
+                    <div align="left" class="form-group" [ngClass]="{'has-error':!complexForm.controls['itemPrice'].valid && complexForm.controls['itemPrice'].touched}">
+                            <label><b>Price</b></label>
+                            <input class="form-control input-underline input-lg" type="text" (change)="ngOnChanges($event)" [formControl]="complexForm.controls['itemPrice']" placeholder="Enter Price"  [(ngModel)]="itemPrice" name="itemPrice" required >
+                            <div *ngIf="complexForm.controls['itemPrice'].hasError('required') && complexForm.controls['itemPrice'].touched" class="alert alert-danger">You must include the item price.</div>
+                            <div *ngIf="complexForm.controls['itemPrice'].hasError('pattern') && complexForm.controls['itemPrice'].touched" class="alert alert-danger">Item price must be a valid number with 2 decimal places.</div>
+                    </div>
+                    <div align="center" class="form-group">
+                            <br>
+                            <label><b>Purchase Count</b></label>
+                            <input #pic type="file" (change)="onChange($event)" name="picture" required >
+                            <br><br>
+                    </div>
+                    <div align="center" class="form-group"> 
+                            <button [disabled]="!complexForm.valid || !valid" class="btn btn-primary" (click) ='onSubmitAdd($event, user.value)'>Add</button>    
+                    </div>
+                </div>
+            </div>
+        </form>
 </div>
 
 <!--edit-->
 <!-- The Modal -->
 <div id="edit" class="modal">
-  <span onclick="document.getElementById('edit').style.display='none'" 
-class="close" title="Close Modal">&times;</span>
+    <span onclick="document.getElementById('edit').style.display='none'" class="close" title="Close Modal">&times;</span>
 
-  <!-- Modal Content -->
-  <form role="form" id="dataedit" class="modal-content animate" >
-				<div class="form-content">
-      <div class="container" align="center">
-      <br><br><br>
-      <div class="form-group">
-            <label><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Item Name</b></label>
-            <input type="text" [(ngModel)]="itemName" [value]="itemName" name="itemName" readonly>
-            <br><br>
-      </div>
-      <div class="form-group">
-            <label><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Item Quantity Stored</b></label>
-            <input type="text" [formControl]="complexForm.controls['itemQuantityStored']" [value]="itemQuantityStored"  [(ngModel)]="itemQuantityStored" name="itemQuantityStored" required >
-            <br><br>
-      </div>
-
-      <div class="form-group">
-            <label><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Price</b></label>
-            <input type="text" [formControl]="complexForm.controls['itemPrice']" [value]="itemPrice"  [(ngModel)]="itemPrice" name="itemPrice" required >
-            <br><br>
-      </div>
-
-      <div class="form-group">
-            <label><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;PurchaseCount</b></label>
-            <input type="text" [value]="purchaseCount"  [(ngModel)]="purchaseCount" name="purchaseCount" readonly>
-            <br><br>
-      </div>
-       <div class="form-group"> 
-            <button [disabled]="!complexForm.valid" class="btn btn-primary" (click) ='onSubmitEdit($event, user.value)'>Save</button>    
-        </div>
-        </div>
-    
-    </div>
-     </form>
+        <!-- Modal Content -->
+        <form role="form" id="dataedit" class="modal-content animate" >
+		    <div class="form-content">
+                <div class="container" align="center"> <br><br>
+                    <div align="left" class="form-group">
+                            <label><b>Item Name</b></label>
+                            <input class="form-control input-underline input-lg" type="text" [(ngModel)]="itemName" [value]="itemName" name="itemName" readonly>                          
+                    </div>
+                    <div class="form-group" [ngClass]="{'has-error':!complexForm.controls['itemQuantityStored'].valid && complexForm.controls['itemQuantityStored'].touched}">
+                            <label><b>Item Quantity Stored</b></label>
+                            <input class="form-control input-underline input-lg" type="text" [formControl]="complexForm.controls['itemQuantityStored']" [value]="itemQuantityStored"  [(ngModel)]="itemQuantityStored" name="itemQuantityStored" required >
+                            <div *ngIf="complexForm.controls['itemQuantityStored'].hasError('required') && complexForm.controls['itemQuantityStored'].touched" class="alert alert-danger">You must include how many items are stored.</div>
+                            <div *ngIf="complexForm.controls['itemQuantityStored'].hasError('minlength') && complexForm.controls['itemQuantityStored'].touched" class="alert alert-danger">You must include an item name.</div>
+                            <div *ngIf="complexForm.controls['itemQuantityStored'].hasError('maxlength') && complexForm.controls['itemQuantityStored'].touched" class="alert alert-danger">Item Quantity stored must not exceed 10 characters.</div>                
+                            <div *ngIf="complexForm.controls['itemQuantityStored'].hasError('pattern') && complexForm.controls['itemQuantityStored'].touched" class="alert alert-danger">Item Quantity stored must be a valid number without decimals.</div>
+                    </div>
+                    <div align="left" class="form-group" [ngClass]="{'has-error':!complexForm.controls['itemPrice'].valid && complexForm.controls['itemPrice'].touched}">
+                            <label><b>Price</b></label>
+                            <input class="form-control input-underline input-lg" type="text" [formControl]="complexForm.controls['itemPrice']" [value]="itemPrice"  [(ngModel)]="itemPrice" name="itemPrice" required >
+                            <div *ngIf="complexForm.controls['itemPrice'].hasError('required') && complexForm.controls['itemPrice'].touched" class="alert alert-danger">You must include the item price.</div>
+                            <div *ngIf="complexForm.controls['itemPrice'].hasError('pattern') && complexForm.controls['itemPrice'].touched" class="alert alert-danger">Item price must be a valid number with 2 decimal places.</div>
+                    </div>
+                    <div align="left" class="form-group">
+                            <br>
+                            <label><b>PurchaseCount</b></label>
+                            <input class="form-control input-underline input-lg" type="text" [value]="purchaseCount"  [(ngModel)]="purchaseCount" name="purchaseCount" readonly>                     
+                    </div>
+                    <div align="center" class="form-group"> 
+                            <button [disabled]="!complexForm.valid" class="btn btn-primary" (click) ='onSubmitEdit($event, user.value)'>Save</button>    
+                    </div>
+                </div>
+            </div>
+        </form>
 </div>
 
 
 <!--delete-->
 <div id="del" class="modal" >
-  <span onclick="document.getElementById('del').style.display='none'" 
-class="close" title="Close Modal">&times;</span>
- <form role="form" id="datadel" class="modal-content animate" >
- <div class="container" align="center">
-  <!-- Modal Content --><br><br><br><br>
-    <h3 align="center">Are you sure you want<br> to delete this Item?</h3><br>
-    <h4 align="center">Item ID:{{itemID}}</h4>
-    <h4 align="center">Item Name: {{itemName}}</h4>
-    <br><br>
-    <button class="btn btn-success" (click) ='onSubmitDel($event, user.value)'><i class="fa fa-check"></i></button>
-    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-    <button class="btn btn-danger" onclick="document.getElementById('del').style.display='none'"><i class="fa fa-remove"></i></button>
-    <br><br><br><br>
-</div>
-</form>
+    <span onclick="document.getElementById('del').style.display='none'" class="close" title="Close Modal">&times;</span>
+        <form role="form" id="datadel" class="modal-content animate" >
+            <div class="container" align="center"><br><br><br><br>
+                <!-- Modal Content -->
+                <h3 align="center">Are you sure you want<br> to delete this Item?</h3><br>
+                <h4 align="center">Item ID:{{itemID}}</h4>
+                <h4 align="center">Item Name: {{itemName}}</h4>
+                <br><br>
+                <button class="btn btn-success" (click) ='onSubmitDel($event, user.value)'><i class="fa fa-check"></i></button>
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                <button class="btn btn-danger" onclick="document.getElementById('del').style.display='none'"><i class="fa fa-remove"></i></button>
+                <br><br><br><br>
+            </div>
+        </form>
 </div>
 
 
