--- a/src/client/app/dashboard/admin/admin.component.html
+++ b/src/client/app/dashboard/admin/admin.component.html
@@ -8,17 +8,29 @@
 				<div class="form-content">
 					
 					<div class="form-group">
-						<input type="password" [(ngModel)]='oldPass' name='oldPass' class="form-control input-underline input-lg" id="oldPass" placeholder="Old Password">
+						<input type="password" [formControl]="complexForm.controls['pass']" [(ngModel)]='oldPass' name='oldPass' class="form-control input-underline input-lg" id="oldPass" placeholder="Old Password">
+						<div *ngIf="complexForm.controls['pass'].hasError('required') && complexForm.controls['pass'].touched" class="alert alert-danger">You must enter your old password.</div>
+                        <div *ngIf="complexForm.controls['pass'].hasError('maxlength') && complexForm.controls['pass'].touched" class="alert alert-danger">Password must not exceed 16 characters.</div>
+                            
 					</div> 
 					<div class="form-group">
-						<input type="password" [(ngModel)]='newPass' name='newPass' class="form-control input-underline input-lg" id="newPass" placeholder="New Password">
+						<input type="password" [formControl]="complexForm.controls['new']" [(ngModel)]='newPass' name='newPass' class="form-control input-underline input-lg" id="newPass" placeholder="New Password">
+						<div *ngIf="complexForm.controls['new'].hasError('required') && complexForm.controls['new'].touched" class="alert alert-danger">You must enter your new password.</div>
+                        <div *ngIf="complexForm.controls['new'].hasError('minlength') && complexForm.controls['new'].touched" class="alert alert-danger">Password must be atleast 8 characters.</div>
+                        <div *ngIf="complexForm.controls['new'].hasError('maxlength') && complexForm.controls['new'].touched" class="alert alert-danger">Password must not exceed 16 characters.</div>
+                            
 					</div>
-                    <div class="form-group">
-						<input type="password" [(ngModel)]='newPass2' name='newPass2' class="form-control input-underline input-lg" id="newPass2" placeholder="Retype New Password">
+                    <div class="form-group" >
+						<input type="password" [formControl]="complexForm.controls['new2']" [(ngModel)]='newPass2' name='newPass2' class="form-control input-underline input-lg" id="newPass2" placeholder="Retype New Password">
+						<div *ngIf="complexForm.controls['new2'].hasError('required') && complexForm.controls['new2'].touched" class="alert alert-danger">You must re-enter your new password.</div>
+                        <div *ngIf="complexForm.controls['new2'].hasError('minlength') && complexForm.controls['new2'].touched" class="alert alert-danger">Password must be atleast 8 characters.</div>
+                        <div *ngIf="complexForm.controls['new2'].hasError('maxlength') && complexForm.controls['new2'].touched" class="alert alert-danger">Pssword must not exceed 16 characters.</div>     
 					</div>
 				</div><br>
 				<!--<a class="btn rounded-btn" (click) ='onSubmit($event)'> Change Password </a>-->
-				<button  class="btn btn-primary" (click) ='onSubmit($event)'>Change Password</button>                          
+				<div  class="form-group">
+						<button [disabled]="!complexForm.valid"  class="btn btn-primary" (click) ='onSubmit($event)'>Change Password</button>                          
+				</div>
 			</form>
 		</div>	
 	</div>
