--- a/src/client/app/dashboard/customer/customer.component.html
+++ b/src/client/app/dashboard/customer/customer.component.html
@@ -73,7 +73,7 @@
              <th>Middle Name</th>
              <th>Number</th>
              <th>Address</th>
-             <th>Verification Code</th>
+             
              <th>Options</th>
         </thead>
         <tbody>
@@ -84,7 +84,7 @@
                 <td>{{customer.cusMiddleName}}</td>
                 <td>{{customer.number}}</td>
                 <td>{{customer.address}}</td>
-                <td>{{customer.verificationCode}}</td>
+               
                 <td>
                     <button *ngIf="editCustomer" class="btn btn-info" (click)="click($event,customer.customerID,customer.cusPassword,customer.cusFirstName,customer.cusMiddleName,customer.cusLastName,customer.number,customer.address,customer.verificationCode)" onclick="document.getElementById('edit').style.display='block'">
                         <i class="fa fa-pencil"></i>
@@ -108,10 +108,10 @@
                     <h4 align="center">Customer ID: {{customerID}}</h4>
                     <h4 align="center">Name: {{cusLastName}}, {{cusFirstName}} {{cusMiddleName}}</h4><br><br>            
                     <button class="btn btn-success" (click) ='onSubmitDel()'>
-                        <i class="fa fa-check"></i>
+                        Yes
                     </button>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;                       
                     <button class="btn btn-danger" onclick="document.getElementById('del').style.display='none'">
-                        <i class="fa fa-remove"></i>
+                        No
                     </button><br><br><br><br>
             </div>
         </form>
