--- a/src/client/app/dashboard/custservice/custservice.component.html
+++ b/src/client/app/dashboard/custservice/custservice.component.html
@@ -87,7 +87,7 @@
                     <button *ngIf="editEmployee" class="btn btn-info" (click)="click($event,employee.employeeID,employee.empPassword,employee.empFirstName,employee.empMiddleName,employee.empLastName,employee.empType)" onclick="document.getElementById('edit').style.display='block'">
                         <i class="fa fa-pencil"></i>
                     </button>
-                    <button  *ngIf="delEmployee" class="btn btn-danger" (click)="click($event,employee.employeeID,employee.empPassword,employee.empFirstName,employee.empMiddleName,employee.empLastName,employee.empType)" onclick="document.getElementById('del').style.display='block'">
+                    <button  *ngIf="delEmployee" class="btn btn-danger" (click)="clickdel($event,employee.employeeID,employee.empFirstName,employee.empMiddleName,employee.empLastName)" onclick="document.getElementById('del').style.display='block'">
                         <i class="fa fa-remove"></i>
                     </button>
                 </td>
@@ -165,10 +165,10 @@
                 <h4 align="center">Employee ID: {{employeeID}}</h4>
                 <h4 align="center">Name: {{empLastName}}, {{empFirstName}} {{empMiddleName}}</h4><br><br>            
                 <button class="btn btn-success" (click) ='onSubmitDel()'>
-                    <i class="fa fa-check"></i>
+                    Yes
                 </button>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                 <button class="btn btn-danger" onclick="document.getElementById('del').style.display='none'">
-                    <i class="fa fa-remove"></i>
+                    No
                 </button><br><br><br><br>
             </div>
         </form>
