--- a/src/client/app/dashboard/item/item.component.html
+++ b/src/client/app/dashboard/item/item.component.html
@@ -103,7 +103,6 @@
 
 
 <!--add-->
-<!--FINISH PASSING ID TO MODAL-->
 <!-- The Modal -->
 <div id="add" class="modal">
     <span onclick="document.getElementById('add').style.display='none'" class="close" title="Close Modal">&times;</span>
@@ -120,7 +119,6 @@
                             <label><b>Item Quantity Stored</b></label>
                             <input class="form-control input-underline input-lg" type="text" (change)="ngOnChanges($event)" [formControl]="complexForm.controls['itemQuantityStored']" placeholder="Enter Quantity to be Stored"  [(ngModel)]="itemQuantityStored" name="itemQuantityStored" required >
                             <div *ngIf="complexForm.controls['itemQuantityStored'].hasError('required') && complexForm.controls['itemQuantityStored'].touched" class="alert alert-danger">You must include how many items are stored.</div>
-                            <div *ngIf="complexForm.controls['itemQuantityStored'].hasError('minlength') && complexForm.controls['itemQuantityStored'].touched" class="alert alert-danger">You must include an item name.</div>
                             <div *ngIf="complexForm.controls['itemQuantityStored'].hasError('maxlength') && complexForm.controls['itemQuantityStored'].touched" class="alert alert-danger">Item Quantity stored must not exceed 10 characters.</div>
                             <div *ngIf="complexForm.controls['itemQuantityStored'].hasError('pattern') && complexForm.controls['itemQuantityStored'].touched" class="alert alert-danger">Item Quantity stored must be a valid number without decimals.</div>
                     </div>
@@ -157,7 +155,7 @@
                             <label><b>Item Name</b></label>
                             <input class="form-control input-underline input-lg" type="text" [(ngModel)]="itemName" [value]="itemName" name="itemName" readonly>                          
                     </div>
-                    <div class="form-group" [ngClass]="{'has-error':!complexForm.controls['itemQuantityStored'].valid && complexForm.controls['itemQuantityStored'].touched}">
+                    <div align="left" class="form-group" [ngClass]="{'has-error':!complexForm.controls['itemQuantityStored'].valid && complexForm.controls['itemQuantityStored'].touched}">
                             <label><b>Item Quantity Stored</b></label>
                             <input class="form-control input-underline input-lg" type="text" [formControl]="complexForm.controls['itemQuantityStored']" [value]="itemQuantityStored"  [(ngModel)]="itemQuantityStored" name="itemQuantityStored" required >
                             <div *ngIf="complexForm.controls['itemQuantityStored'].hasError('required') && complexForm.controls['itemQuantityStored'].touched" class="alert alert-danger">You must include how many items are stored.</div>
@@ -195,9 +193,9 @@
                 <h4 align="center">Item ID:{{itemID}}</h4>
                 <h4 align="center">Item Name: {{itemName}}</h4>
                 <br><br>
-                <button class="btn btn-success" (click) ='onSubmitDel($event, user.value)'><i class="fa fa-check"></i></button>
+                <button class="btn btn-success" (click) ='onSubmitDel($event, user.value)'>Yes</button>
                 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                <button class="btn btn-danger" onclick="document.getElementById('del').style.display='none'"><i class="fa fa-remove"></i></button>
+                <button class="btn btn-danger" onclick="document.getElementById('del').style.display='none'">No</button>
                 <br><br><br><br>
             </div>
         </form>
