--- a/src/client/app/dashboard/item/item.component.html
+++ b/src/client/app/dashboard/item/item.component.html
@@ -86,7 +86,7 @@
                 <td>{{item.itemID}}</td>
                 <td>{{item.itemName}}</td>
                 <td>{{item.itemQuantityStored}}</td>
-                <td>{{item.itemPrice}}</td>
+                <td>₱{{item.itemPrice}}</td>
                 <td>{{item.purchaseCount}}</td>
                 <td>
                     <button class="btn btn-info" (click)="clickedit($event,item.itemID,item.itemName,item.itemQuantityStored,item.itemPrice,item.purchaseCount,item.picture)" onclick="document.getElementById('edit').style.display='block'">
