--- a/src/client/app/dashboard/order/order.component.html
+++ b/src/client/app/dashboard/order/order.component.html
@@ -10,7 +10,7 @@
         <th>Total</th>
 		<th>Status</th>
          <th>Remarks</th>
-        <th>Time</th>
+        <th>Delivery Time</th>
         <th>Packaging</th>
         <th>Location</th>
 		
