--- a/src/client/app/dashboard/itemstatistics/itemstatistics.component.html
+++ b/src/client/app/dashboard/itemstatistics/itemstatistics.component.html
@@ -15,7 +15,7 @@
                 <td><img src="{{item.picture}}" width="100" height="100"></td>
                 <td>{{item.itemID}}</td>
                 <td>{{item.itemName}}</td>
-                <td>{{item.itemPrice}}</td>
+                <td>₱{{item.itemPrice}}</td>
                 <td>{{item.purchaseCount}}</td>              
             </tr>
             
